Fixes slider overflow bug on mobile

--- a/public/src/scss/_slider.scss
+++ b/public/src/scss/_slider.scss
@@ -44,6 +44,7 @@
         background-color: black;
         padding-left: 3em;
         padding-right: 3em;
+        overflow: hidden;
     }
 
     &__slides {
